--- a/exten/manifest.json
+++ b/exten/manifest.json
@@ -7,17 +7,17 @@
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
 
   "permissions": [
-    "https://*.phono.com/", "http://*.phono.com/", "http://*.westhawk.co.uk/"
+    "https://voxeolabs.atlassian.net/","https://*.phono.com/", "http://*.phono.com/", "http://*.westhawk.co.uk/"
   ],
-  "background": {
-    "page": "background.html"
-  },
-  "sandbox": {
-     "pages": ["phono.html"]
-  },
   "browser_action": {
     "default_icon": "phono-slide-icon.png",
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://voxeolabs.atlassian.net/*"],
+      "js": ["jquery-1.8.3.js", "jquery.phono.js","phono.js"]
+    }
+  ]
 }
 
